feat(photon): use dynamic stdev with swerve
also switched the logging function